For the latest news, visit the SparForte web site.

Objective: Bug fixes following 2.5 and reducing technical debt.  Foundations of AI.

CHANGES SINCE 2.5

1. New: --session option to store history and local profiles under alternate names.

2. New: System.Session_Name to read the name from --session.

3. New: pragma prompt_idle_script and prompt_idle_speed.

4. New: New examples rock.sp.

5. New: case in is now case procedure. [negative tests needed]
